Create the Profile Page and view list of posts shared by the profile owner

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,5 +1,5 @@
 .Post {
-  background-color: #343a40;
+  background-color: #6c757d;
   border: 1px solid #dadadf;
   border-radius: 1px;
   margin-bottom: 24px;
